<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.VenueRegisterView">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/venue_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_de_la_sede"
            android:inputType="text" />

        <EditText
            android:id="@+id/venue_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ciudad_sede"
            android:inputType="text" />

        <EditText
            android:id="@+id/venue_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/aforo_sede"
            android:inputType="number" />

        <EditText
            android:id="@+id/foundation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha_inaguración"
            android:inputType="datetime|date" />

        <CheckBox
            android:id="@+id/adapted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adaptado_checkbox" />

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="409dp"
            app:mapbox_cameraTargetLat="41.65606"
            app:mapbox_cameraTargetLng="-0.87734"
            app:mapbox_cameraZoom="9.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addVenue"
            android:text="@string/añadir_sede" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>