<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    tools:context=".view.ArtistDetailsView" >

    <TextView
        android:id="@+id/artist_id_details_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/artist_id_details_tv">

        <TextView
            android:id="@+id/artist_name_details_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/birthdate_details_tv"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fe_nac"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthdate_details_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_originCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/originCountry_details_tv"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pais_origen"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/originCountry_details_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/published_cd_details_tv"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cd_pub"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/published_cd_details_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/instagram_details_tv"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instagram"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instagram_details_tv1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_active"
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/active_details_tv"
                android:layout_width="4dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/activo"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/active_details_tv1"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/edit_artist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="editArtist"
                android:text="@string/editar" />

            <Button
                android:id="@+id/delete_artist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:onClick="showDeleteConfirmationDialog"
                android:text="@string/eliminar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>